adjust formatting and build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ java {
 application {
     // Define the main class for the application.
     mainClass = 'org.example.App'
+    applicationDefaultJvmArgs = ["--enable-native-access=ALL-UNNAMED"]
 }
 
 test {
