--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,7 @@ dependencies {
     // Use JUnit test framework.
     testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
     testImplementation "org.mockito:mockito-core:5.10.0"
-    testImplementation "org.mockito:mockito-inline:5.2.0" // For mocking static methods like Repository.updateTimestamp
-    testImplementation "org.wiremock:wiremock-standalone:3.3.1"
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
     implementation 'org.slf4j:slf4j-nop:2.0.12'
 
     // This dependency is used by the application.
